@@ -41,6 +41,7 @@ namespace utp
 	Connection::TransmissionError::TransmissionError(const char* file, int line)
 	{
 		location = QString("TransmissionError in %1 at line %2\n").arg(file).arg(line);
+		Out(SYS_GEN|LOG_DEBUG) << location << endl;
 	}
 	
 	Connection::Connection(bt::Uint16 recv_connection_id, Type type, const net::Address& remote, Transmitter* transmitter) 
